--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   justify-content: center;
 }
 
-/* Size tiers */
+/* Size tiers for different phone states */
 .small {
   width: 70px;
 }
@@ -35,12 +35,15 @@ body {
   display: block;
 }
 
+/* Sprite image (intro animation) */
 #sprite {
-  width: 200px;
+  width: 70px; /* match small phone size */
   height: auto;
   display: none;
+  margin: auto;
 }
 
+/* Pulse animation on hover */
 .pulse-hover:hover {
   animation: pulse 1s infinite;
 }
