--- a/style.css
+++ b/style.css
@@ -22,17 +22,6 @@ body {
   display: block;
 }
 
-/* Clickable zone only on top half of phone */
-#click-zone {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 50%;
-  z-index: 10;
-}
-
-/* Sprite image (intro animation) */
 #sprite {
   width: 250px;
   height: auto;
@@ -40,7 +29,24 @@ body {
   margin: auto;
 }
 
-/* Pulse animation on hover */
+/* Click zones */
+#click-top,
+#click-bottom {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  z-index: 10;
+}
+
+#click-top {
+  top: 0;
+}
+
+#click-bottom {
+  bottom: 0;
+}
+
+/* Pulse effect */
 .pulse-hover:hover {
   animation: pulse 1s infinite;
 }
