--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
+  margin: 0;
   background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0;
 }
 
 #phone-container {
@@ -12,30 +12,27 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 200px;
-  height: 400px;
 }
 
-#sprite-intro {
+#sprite, #phone-frame, #sprite-overlay {
   position: absolute;
   max-width: 100%;
-  max-height: 100%;
-  visibility: visible;
+  height: auto;
+}
+
+#sprite {
+  z-index: 2;
 }
 
 #phone-frame {
-  position: absolute;
-  max-width: 100%;
-  max-height: 100%;
   z-index: 1;
 }
 
-#sprite-339 {
-  position: absolute;
-  top: 15%; /* Adjust to align with phone screen */
-  left: 22%;
-  width: 56%;
-  height: auto;
+#sprite-overlay {
   display: none;
-  z-index: 2;
+  z-index: 3;
+  top: 27%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 75px; /* Adjust to fit inside screen area */
 }
