--- a/style.css
+++ b/style.css
@@ -31,3 +31,20 @@ body {
   display: block;
   user-select: none;
 }
+
+.phone-button {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  z-index: 2;
+}
+
+.phone-button:active {
+  background-color: rgba(0, 255, 0, 0.4); /* Green flash */
+}
+
