--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 #phone-frame {
-  width: 250px;
+  width: 236px;
   height: auto;
   display: block;
   user-select: none;
@@ -34,8 +34,8 @@ body {
 
 .phone-button {
   position: absolute;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   background-color: transparent;
   border: none;
   border-radius: 50%;
@@ -45,6 +45,5 @@ body {
 }
 
 .phone-button:active {
-  background-color: rgba(0, 255, 0, 0.4); /* Green flash */
+  background-color: rgba(0, 255, 0, 0.4); /* green flash */
 }
-
