--- a/style.css
+++ b/style.css
@@ -48,18 +48,12 @@ body {
 
 .key-overlay-img {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: auto;
-  height: auto;
-  max-width: none;
-  max-height: none;
-  pointer-events: none;
   display: none;
+  pointer-events: none;
   z-index: 11;
 }
 
-.key-button:hover .key-overlay-img {
+.key-button:hover + .key-overlay-img {
   display: block;
 }
 
@@ -73,4 +67,17 @@ body {
 #flip-trigger.debug {
   outline: 2px dashed lime;
 }
+
+.key-highlight {
+    position: absolute;
+    width: 40px;
+    height: 30px;
+    border: 2px dashed blue;
+    top: 550px;
+    left: 705px;
+    pointer-events: none;
+    z-index: 20;
+}
+
+
 
